--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
     <p>Welcome to <%= title %></p>
 
     <a href="/school/all">Schools - View All</a> <br />
+    <a href="/account/all">Accounts - View All</a> <br />
+    <a href="/school/byid">Schools - View By ID</a> <br />
 
     <br />
 
