--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,10 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
 
-    <a href="/school/all">Schools - View All</a> <br />
-    <a href="/account/all">Accounts - View All</a> <br />
-    <a href="/school/byid">Schools - View By ID</a> <br />
+    <a href="/school/all">School - View All</a> <br />
+    <a href="/account/all">Account - View All</a> <br />
+    <a href="/resume/all">Resume - View All</a> <br />
+    <a href="/company/all">Company - View All</a> <br />
 
     <br />
 
