--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <a href="/account/all">Account - View All</a> <br />
     <a href="/resume/all">Resume - View All</a> <br />
     <a href="/company/all">Company - View All</a> <br />
+    <a href="/address/all">Address - View All</a> <br />
 
     <br />
 
