--- a/views/account/accountViewById.ejs
+++ b/views/account/accountViewById.ejs
@@ -1,14 +1,13 @@
 <html>
 <head>
-    <title>Accounts - <%= result[0].account_name %></title>
+    <title>Accounts - <%= result[0].first_name %></title>
 </head>
 <body>
-    <h1>Accounts</h1>
-    <ul>
-        <li>Account ID: <%= result[0].account_id%></li>
-        <li>Account Name: <%= result[0].first_name %> <%= result[0].last_name%></li>
-        <li>Email: <%= result[0].email %></li>
-    </ul>
+<h1>Account</h1>
+<ul>
+    <li>Account ID: <%= result[0].account_id%></li>
+    <li>Account Name: <%= result[0].first_name %> <%= result[0].last_name %></li>
+    <li>Account Email: <%= result[0].email %></li>
+</ul>
 </body>
-
 </html>
