--- a/views/company/companyAdd.ejs
+++ b/views/company/companyAdd.ejs
@@ -1,23 +1,29 @@
-<html>
-<head>
-    <title>Add New Company</title>
-</head>
-<body>
-<h1>Add New Company</h1>
-<form action="/company/insert" method="get">
-    Company Name: <input id="company_name" name="company_name" type="text" />
-    <br />
-    <br />
-    Company ID:
-    <select id="company_id" name="company_id">
-        <% for(var i=0; company.length > i; i++ ) { %>
-        <option value="<%= company[i].company_id %>"><%= company[i].company_id %></option>
-        <% } %>
-    </select>
+<%- include("../includes/header.ejs", {title:"Add New Company"}); %>
 
-    <input type="submit" />
+    <h1>Add New Company</h1>
+    <form action="/company/insert" method="get">
+        Company Name: <input id="company_name" name="company_name" type="text" />
+        <br />
+        <br />
+        Address
+        <br />
+        <select id="address_id" name="address_id" multiple="multiple">
+            <% for(var i=0; address.length > i; i++ ) { %>
+                <option value="<%= address[i].address_id %>"><%= address[i].street + ', ' + address[i].zipcode %></option>
+            <% } %>
+        </select>
 
-</form>
-</body>
+        <!-- Initialize the multiselect plugin: -->
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('#address_id').multiselect();
+            });
+        </script>
 
-</html>
+
+        <br />
+        <input type="submit" />
+
+    </form>
+
+<%- include("../includes/footer.ejs"); %>
