--- a/views/account/accountAdd.ejs
+++ b/views/account/accountAdd.ejs
@@ -1,31 +1,19 @@
 <html>
 <head>
-    <title>Add New Account</title>
+    <title>Add New Accounts</title>
 </head>
 <body>
-    <h1>Add New Account</h1>
-    <form action="/Account/insert" method="get">
-        Email: <input id="email" name="email" type="text" />
-        <br />
-        <br />
-    <form action="/Account/insert" method="get">
-        First Name: <input id="first_name" name="first_name" type="text" />
-        <br />
-        <br />
-    <form action="/Account/insert" method="get">
-        Last Name: <input id="last_name" name="last_name" type="text" />
-        <br />
-        <br />
-        Account ID:
-        <select id="account_id" name="account_id">
-            <% for(var i=0; account.length > i; i++ ) { %>
-                <option value="<%= account[i].account_id %>"><%= account[i].account_id %></option>
-            <% } %>
-        </select>
-
-        <input type="submit" />
-
-    </form>
+<h1>Add New Account</h1>
+<form action="/account/insert" method="get">
+    First Name: <input id="first_name" name="first_name" type="text" />
+    <br />
+    <br />
+    Last Name: <input id="last_name" name="last_name" type="text" />
+    <br />
+    <br />
+    Email: <input id="email" name="email" type="text"/>
+    <input type="submit"/>
+</form>
 </body>
 
 </html>
