--- a/views/account/accountViewAll.ejs
+++ b/views/account/accountViewAll.ejs
@@ -1,27 +1,28 @@
 <html>
-    <head>
-        <title>Accounts</title>
-    </head>
-    <body>
-        <h1>Accounts</h1>
-        <a href="/account/add">Add New Account</a> <br />
+<head>
+    <title>Accounts</title>
+</head>
+<body>
+<h1>Accounts</h1>
+<a href="/account/add">Add New Account</a> <br />
 
-        <br />
+<br />
 
-        <table border="1">
-            <tr><th>Name</th><th>Email</th><th>Action</th></tr>
-            <% for(var i=0; result.length > i; i++ ) { %>
-            <tr>
-                <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].first_name %> <%= result[i].last_name %></a></td>
-                <td><%= result[i].email %></td>
-                <td><form action="/account/delete/">
-                        <input type="hidden" name="account_id" id="account_id" value="<%= result[i].account_id %>" />
-                        <input type="submit" value="Delete"/>
-                    </form>
-                </td>
-            </tr>
-            <% } %>
-        </table>
-    </body>
+<table border="1">
+    <tr><th>Name</th><th>Action</th></tr>
+    <% for(var i=0; result.length > i; i++ ) { %>
+    <tr>
+        <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].first_name%> <%= result[i].last_name %></a></td>
+        <td>
+            <button onclick="event.preventDefault();window.location.href='/account/edit2/?account_id=<%= result[i].account_id %>'">Edit</button>
+            <form action="/account/delete/" style="display: inline">
+                <input type="hidden" name="account_id" id="account_id" value="<%= result[i].account_id %>" />
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
+    </tr>
+    <% } %>
+</table>
+</body>
 
 </html>
