--- a/views/address/addressAdd.ejs
+++ b/views/address/addressAdd.ejs
@@ -3,25 +3,18 @@
     <title>Add New Address</title>
 </head>
 <body>
-    <h1>Add New Address</h1>
-    <form action="/address/insert" method="get">
-        Street: <input id="street" name="street" type="text" />
-        <br />
-        <br />
-    <form action="/address/insert" method="get">
-        Zip Code: <input id="zip_code" name="zip_code" type="text" />
-        <br />
-        <br />
-        Address
-        <select id="address_id" name="address_id">
-            <% for(var i=0; address.length > i; i++ ) { %>
-                <option value="<%= address[i].address_id %>"><%= address[i].address_id %></option>
-            <% } %>
-        </select>
-
-        <input type="submit" />
-
-    </form>
+<h1>Add New Address</h1>
+<form action="/address/insert" method="get">
+    Address ID: <input id="address_id" name="address_id" type="text" />
+    <br />
+    <br />
+    Street Name: <input id="street" name="street" type="text"/>
+    <br />
+    <br />
+    Zip Code: <input id="zip_code" name="zip_code" type="text"/>
+    <br />
+    <br />
+    <input type="submit" />
+</form>
 </body>
-
 </html>
