--- a/views/resume/resumeViewAll.ejs
+++ b/views/resume/resumeViewAll.ejs
@@ -1,27 +1,29 @@
 <html>
-    <head>
-        <title>Resumes</title>
-    </head>
-    <body>
-        <h1>Resumes</h1>
-        <a href="/resume/add">Add New Resume</a> <br />
+<head>
+    <title>Resumes</title>
+</head>
+<body>
+<h1>Resumes</h1>
+<a href="/resume/add">Add New Resume</a> <br />
 
-        <br />
+<br />
 
-        <table border="1">
-            <tr><th>Name</th><th>Account ID</th><th>Action</th></tr>
-            <% for(var i=0; result.length > i; i++ ) { %>
-            <tr>
-                <td><a href="/resume/?resume_id=<%= result[i].resume_id %>"><%= result[i].resume_name %></a></td>
-                <td><%= result[i].account_id %></td>
-                <td><form action="/resume/delete/">
-                        <input type="hidden" name="resume_id" id="resume_id" value="<%= result[i].resume_id %>" />
-                        <input type="submit" value="Delete"/>
-                    </form>
-                </td>
-            </tr>
-            <% } %>
-        </table>
-    </body>
+<table border="1">
+    <tr><th>Name</th><th>Account</th><th>Action</th></tr>
+    <% for(var i=0; result.length > i; i++ ) { %>
+    <tr>
+        <td><a href="/resume/?resume_id=<%= result[i].resume_id %>"><%= result[i].resume_name %></a></td>
+        <td><a href="/account/?account_id=<%= result[i].account_id %>"><%= result[i].first_name + " " + result[i].last_name %></a></td>
+        <td>
+            <button onclick="event.preventDefault();window.location.href='/resume/edit2/?resume_id=<%= result[i].resume_id %>'">Edit</button>
+            <form action="/resume/delete/" style="display:inline;">
+                <input type="hidden" name="resume_id" id="resume_id" value="<%= result[i].resume_id %>" />
+                <input type="submit" value="Delete"/>
+            </form>
+        </td>
+    </tr>
+    <% } %>
+</table>
+</body>
 
 </html>
