--- a/views/resume/resumeViewById.ejs
+++ b/views/resume/resumeViewById.ejs
@@ -1,14 +1,42 @@
 <html>
 <head>
-    <title>Resumes - <%= result[0].resume_name %></title>
+    <title>Resumes - <%= resume[0].resume_name %></title>
 </head>
 <body>
-    <h1>Resumes</h1>
+<h1>Resume <%= resume[0].resume_id%>: <%= resume[0].resume_name %> </h1>
+<ul>
+    Resume ID: <%= resume[0].resume_id %>
+    <br/>
+    <br/>
+    Account ID: <%= resume[0].account_id %>
+    <br/>
+    <br/>
+    Companies:
     <ul>
-        <li>Resume ID: <%= result[0].resume_id%></li>
-        <li>Resume Name: <%= result[0].resume_name %></li>
-        <li>Account ID: <%= result[0].account_id %></li>
+        <% for(var i=0; resume_company.length > i; i++ ) { %>
+        <li><%= resume_company[i].company_name %></li>
+        <% } %>
     </ul>
+    <br/>
+    Skill:
+    <ul>
+        <% for(var i=0; resume_skill.length > i; i++ ) { %>
+        <li> <%= resume_skill[i].name %> </li>
+        <ul>
+            <li> <%= resume_skill[i].description %></li>
+        </ul>
+        <% } %>
+    </ul>
+    <br/>
+
+    Education:
+    <ul>
+        <% for(var i=0; resume_school.length > i; i++ ) { %>
+        <li> <%= resume_school[i].school_name %> </li>
+        <% } %>
+    </ul>
+    <br/>
+</ul>
 </body>
 
 </html>
