--- a/views/skill/skillAdd.ejs
+++ b/views/skill/skillAdd.ejs
@@ -3,25 +3,14 @@
     <title>Add New Skill</title>
 </head>
 <body>
-    <h1>Add New Skill</h1>
-    <form action="/skill/insert" method="get">
-        Skill Name: <input id="name" name="name" type="text" />
-        <br />
-        <br />
-    <form action="/skill/insert" method="get">
-        Description: <input id="description" name="description" type="text" />
-        <br />
-        <br />
-        Skill ID
-        <select id="skill_id" name="skill_id">
-            <% for(var i=0; skill.length > i; i++ ) { %>
-                <option value="<%= skill[i].skill_id %>"><%= skill[i].skill_id %></option>
-            <% } %>
-        </select>
-
-        <input type="submit" />
-
-    </form>
+<h1>Add New Skill</h1>
+<form action="/skill/insert" method="get">
+    Skill Name: <input id="skill_name" name="skill_name" type="text" />
+    <br />
+    <br />
+    Skill Description <input id="skill_description" name="skill_description" type="text" />
+    <br />
+    <input type="submit" />
+</form>
 </body>
-
 </html>
